[FIX] Fixed an issue where the sidebar would overlap on top of the footer when the window is too low

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ header{
 
 footer{
     height: 100px;
-    background-color: #222222;
+    background-color: #222;
     padding: 20px 10px;
 }
 
@@ -33,6 +33,7 @@ footer{
     width: 250px;
     height: 100%;
     background-color: #000;
+    z-index: -1;
 }
 
 .content{
